--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<router-outlet></router-outlet>
-
-<app-sidebar></app-sidebar>
+<app-sidebar (onToggleSideNav)="onToggleSideNav($event)"></app-sidebar>
+<app-products
+    [collapsed]="isSideNavCollapsed"
+    [screenWidth]="screenWidth"
+></app-products>
