refactor: delete sidebar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<app-sidebar (onToggleSideNav)="onToggleSideNav($event)"></app-sidebar>
-<app-products
-    [collapsed]="isSideNavCollapsed"
-    [screenWidth]="screenWidth"
-></app-products>
+<router-outlet></router-outlet>
