feature: add service and component product list

--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -1,1 +1,5 @@
-<p>product-list works!</p>
+<div *ngFor="let products of product">
+    <p>{{ products.productName }}</p>
+    <p>{{ products.productDescription }}</p>
+    <p>{{ products.productPrice }}</p>
+</div>
