--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+@import './assets/utils/variables';
 
 body {
     margin: 0;
     padding: 0;
     font-family: "Poppins" , sans-serif;
+    background-color: $black-dark;
+    color: $text-color
 }
