feature: add product form

--- a/src/app/products/create-product/create-product.component.html
+++ b/src/app/products/create-product/create-product.component.html
@@ -1,1 +1,17 @@
-<p>create-product works!</p>
+<form class="form">
+    <h3 class="form__title">Criar novo produto</h3>
+    <section class="form__inputs">
+        <input type="text" class="form__inputs__style" placeholder="Digite o nome do produto">
+        <input type="text" class="form__inputs__style" placeholder="Digite a descrição do produto">
+        <input type="text" class="form__inputs__style" placeholder="Digite o preço do produto">
+        <label class="form__inputs__style--upload">
+            <span>Adicione a foto do produto</span>
+            <i class="material-icons form__inputs__style--span">upload_file</i>
+            <input type="file">
+        </label>
+        
+    </section>
+    <footer class="form__footer">
+        <button class="form__footer__button">Criar produto</button>
+    </footer>
+</form>
