--- a/src/assets/utils/_variables.scss
+++ b/src/assets/utils/_variables.scss
@@ -1,5 +1,6 @@
 $purple: #7051dc;
-$black-dark: #08081A;
+$purple-dark: #431c76;
+$black-dark: #08081a;
 $dark: #1c1c2e;
 $text-color: #f4ede8;
 $white: #FFFFFF;
