--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+@import 'material-icons/iconfont/material-icons.css';
 @import './assets/utils/variables';
 
 body {
@@ -7,5 +8,9 @@ body {
     padding: 0;
     font-family: "Poppins" , sans-serif;
     background-color: $black-dark;
-    color: $text-color
+    color: $text-color;
+}
+
+input[type="text"]:focus {
+    border: 2px solid $purple;
 }
