feature: add home dashboard with graph

--- a/src/app/components/graph/graph.component.html
+++ b/src/app/components/graph/graph.component.html
@@ -1,1 +1,6 @@
-<p>graph works!</p>
+<canvas baseChart width="1200" height="400"
+[type]="'line'"
+[data]="lineChartData"
+[options]="lineChartOptions"
+[legend]="lineChartLegend">
+</canvas>
