--- a/src/assets/utils/_variables.scss
+++ b/src/assets/utils/_variables.scss
@@ -1,3 +1,5 @@
+
+// COLORS
 $purple: #7051dc;
 $purple-dark: #431c76;
 $black-dark: #08081a;
@@ -5,3 +7,8 @@ $dark: #1c1c2e;
 $text-color: #f4ede8;
 $white: #FFFFFF;
 $black: #000000;
+$green: #2ace25;
+$red: #ee2a2a;
+
+// SIZE
+$bold: 700
