feature: add create produt

--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -2,7 +2,11 @@
     <p>{{ products.productName | titlecase }} | {{ products.productDescription }} | {{ products.productPrice }}</p>
 
     <div class="card__modal">
-        <p>oi</p>
-        <p>oi</p>
+        <div class="card__modal-icons card__modal-icons--trash">
+            <i></i>
+        </div>
+        <div class="card__modal-icons card__modal-icons--edit">
+            <i></i>
+        </div>
     </div>
 </section>
