--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,3 +1,5 @@
+
+
 <section class="header">
     <header class="cards">
         <div class="cards__infos">
@@ -16,6 +18,7 @@
             <span>200 produtos</span></div>
     </header>
     <section class="graph">
+        <h3>Andamento das vendas</h3>
         <app-graph></app-graph>
     </section>
 </section>
