--- a/src/app/products/create-product/create-product.component.html
+++ b/src/app/products/create-product/create-product.component.html
@@ -1,9 +1,9 @@
-<form class="form">
+<form class="form" [formGroup]="productForm" (ngSubmit)="submitNewProduct()">
     <h3 class="form__title">Criar novo produto</h3>
     <section class="form__inputs">
-        <input type="text" class="form__inputs__style" placeholder="Digite o nome do produto">
-        <input type="text" class="form__inputs__style" placeholder="Digite a descrição do produto">
-        <input type="text" class="form__inputs__style" placeholder="Digite o preço do produto">
+        <input type="text" class="form__inputs__style" placeholder="Digite o nome do produto" formControlName="productName">
+        <input type="text" class="form__inputs__style" placeholder="Digite a descrição do produto" formControlName="productDescription">
+        <input type="text" class="form__inputs__style" placeholder="Digite o preço do produto" formControlName="productPrice">
         <label class="form__inputs__style--upload">
             <span>Adicione a foto do produto</span>
             <i class="material-icons form__inputs__style--span">upload_file</i>
@@ -12,6 +12,6 @@
         
     </section>
     <footer class="form__footer">
-        <button class="form__footer__button">Criar produto</button>
+        <button type="submit" [disabled]="!productForm.valid" class="form__footer__button">Criar produto</button>
     </footer>
 </form>
