--- a/src/app/products/create-product/create-product.component.scss
+++ b/src/app/products/create-product/create-product.component.scss
@@ -28,6 +28,8 @@
             padding: 0.9rem;
             border-radius: 5px;
             outline: none;
+            color: $white;
+
 
             &--upload {
                 background-color: $black-dark;
@@ -82,6 +84,12 @@
 
             &:hover {
                 background-color: $purple-dark;
+            }
+
+            &:disabled {
+                background-color: $disabled;
+                color: $disabled-text;
+                cursor: not-allowed;
             }
         }
     }
