--- a/src/app/products/products.component.scss
+++ b/src/app/products/products.component.scss
@@ -34,6 +34,8 @@
 
 .graph {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    margin-top: 5rem;
+    align-items: center;
+    margin-top: 3rem;
 }
