--- a/src/assets/utils/_variables.scss
+++ b/src/assets/utils/_variables.scss
@@ -8,6 +8,7 @@ $text-color: #f4ede8;
 $white: #FFFFFF;
 $black: #000000;
 $green: #2ace25;
+$yellow: #e9d149;
 $red: #ee2a2a;
 $disabled: #eee;
 $disabled-text: #aaa;
