--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -2,11 +2,11 @@
     <p>{{ products.productName | titlecase }} | {{ products.productDescription }} | {{ products.productPrice }}</p>
 
     <div class="card__modal">
-        <div class="card__modal-icons card__modal-icons--trash">
-            <i></i>
-        </div>
         <div class="card__modal-icons card__modal-icons--edit">
-            <i></i>
+            <i class="material-icons">edit</i>
+        </div>
+        <div class="card__modal-icons card__modal-icons--delete">
+            <i class="material-icons">delete</i>
         </div>
     </div>
 </section>
