feature: add authentication component

--- a/src/app/modules/authentication/authentication.component.html
+++ b/src/app/modules/authentication/authentication.component.html
@@ -1,1 +1,10 @@
-<p>authentication works!</p>
+<section class="authentication">
+    <header class="authentication__header">
+        <h1 class="authentication__header__text">Bem vindo de volta!</h1>
+        <h2 class="authentication__header__text">Login</h2>
+        <app-signin></app-signin>
+    </header>
+    <figure class="authentication__image">
+        <img src="../../../assets/img/login.svg" alt="Foto de uma pessoa criativa">
+    </figure>
+</section>
