--- a/src/app/modules/authentication/authentication.component.scss
+++ b/src/app/modules/authentication/authentication.component.scss
@@ -7,11 +7,13 @@
 
     &__header {
         display: flex;
-        flex-direction: column;
+        justify-content: space-evenly;
         align-items: center;
+        flex-direction: column;
+        width: 100%;
 
         &__text {
-            border-bottom: 5px solid $purple;
+            border-bottom: 5px solid #7051dc;
             padding: 0.5rem;
         }
     }
