style: add sidebar

--- a/src/app/modules/products/products.component.html
+++ b/src/app/modules/products/products.component.html
@@ -1,3 +1,4 @@
+<section class="products">
 
 
 <section class="header">
@@ -21,4 +22,5 @@
         <h3>Andamento das vendas</h3>
         <app-graph></app-graph>
     </section>
+</section>
 </section>
