--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -1,110 +1,70 @@
-.sidenav {
-    background: #263238;
-    transition: all .5s ease;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    width: 5rem;
-    height: 100vh;
-    box-shadow: 0.063rem 0 1.25rem 0 #8690a3;
+@import './../../../assets/utils/variables';
 
-    .logo-container {
+.menu {
+    background-color: $purple;
+    font-size: 0.9rem;
+
+    &__list__itens:hover {
+        background-color: $purple-dark;
+        transition: .5s;
+    }
+}
+
+@media(min-width: 843px) {
+    .menu {
+        font-size: 1rem;
+        left: 0;
+        height: 95vh;
+        width: 7%;
+        border-radius: 0 2rem 2rem 0;
+        padding: 1rem;
         display: flex;
-        align-items: center;
-        padding: 0.938rem 0.938rem 0 0.938rem;
-        width: 100%;
+        flex-direction: column;
+        justify-content: space-between;
+        position: fixed;
 
-        .logo {
-            background: #fff;
-            text-align: center;
-            width: 3rem;
-            min-width: 3rem;
-            border-radius: 0.313rem;
-            padding: 0.313rem;
-            font-size: 24px;
-            font-weight: 900;
-            cursor: pointer;
-            border: none;
-        }
-
-        .logo-text {
-            margin-left: 1.5rem;
-            font-size: 24px;
-            font-weight: 700;
-            color: #fff;
-        }
-
-        .btn-close {
-            margin-left: 2rem;
-            cursor: pointer;
-            width: 2rem;
-            height: 2rem;
-            border-radius: 50%;
-            background-color: transparent;
-            border: none;
-
-            .fa-times {
-                color: #fff;
-                font-size: 24px;
-            }
-        }
-    }
-}
-
-.sidenav-collapsed {
-    width: 16.5625rem;
-}
-
-.sidenav-nav {
-    list-style: none;
-    padding: 0.938rem;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: calc(100% - 3.65rem);
-    cursor: pointer;
-
-    .sidenav-nav-item {
-        width: 100%;
-        margin-bottom: 0.625rem;
-
-        .sidenav-nav-link {
+        &__profile {
             display: flex;
+            flex-direction: column;
             align-items: center;
-            height: 3rem;
-            color: #f3f3f3;
-            text-decoration: none;
-            border-radius: 0.625rem;
-            transition: all .3s ease;
-
-            .sidenav-link-icon {
-                font-size: 22px;
-                width: 2rem;
-                min-width: 2rem;
-                margin: 0 0.5rem;
-                text-align: center;
-            }
-
-            .sidenav-link-text {
-                margin-left: 1.5rem;
-            }
+            justify-content: space-around;
+            height: 20%;
+            background: $purple-dark;
+            border-radius: 10px;
+            padding: 0.9rem;
         }
-    }
 
-    .sidenav-nav-item:hover {
-        .sidenav-nav-link {
-            background-color: #fff;
-            color: #000;
+        &__list {
+            padding: 0;
+            margin: 0;
+            list-style: none;
+            margin-top: 2rem;
+  
+            &__item {
+                font-size: 1rem;
+                font-weight: $bold;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+                justify-content: space-around;
+                color: $white;
+                text-decoration: none;
+                cursor: pointer;
+                transition: .5s;
+
+                &:hover {
+                    background-color: $purple-dark;
+                    border-radius: 10px;
+                    padding: 1rem;
+                }
+            }
         }
     }
 }
 
-.active {
-    background-color: #fff;
-
-    .sidenav-link-icon,
-    .sidenav-link-text {
-        color: #000;
+@media(min-width: 1440px) {
+    .menu__list {
+        border-bottom: 1.5px solid $purple-dark;
     }
 }
