style: add sidenav details

--- a/src/app/modules/products/product-list/product-list.component.scss
+++ b/src/app/modules/products/product-list/product-list.component.scss
@@ -1,5 +1,9 @@
 @import '../../../../assets/utils/variables';
 
+.list {
+    margin-left: 8rem;
+}
+
 .card {
     display: flex;
     justify-content: space-between;
