--- a/src/app/modules/products/product-list/product-list.component.html
+++ b/src/app/modules/products/product-list/product-list.component.html
@@ -1,14 +1,15 @@
-<section class="card" *ngFor="let products of product">
-    <app-skeleton *ngIf="!isAvailable" Cwidth="100" Cheight="100"></app-skeleton>
-    <p *ngIf="isAvailable">{{ products.productName | titlecase }} | {{ products.productDescription }} | {{ products.productPrice }}</p>
-
-    <div class="card__modal" *ngIf="isAvailable">
-        <div class="card__modal-icons card__modal-icons--edit">
-            <i class="material-icons">edit</i>
+<section class="list">
+    <section class="card" *ngFor="let products of product">
+        <app-skeleton *ngIf="!isAvailable" Cwidth="100" Cheight="100"></app-skeleton>
+        <p *ngIf="isAvailable">{{ products.productName | titlecase }} | {{ products.productDescription }} | {{ products.productPrice }}</p>
+    
+        <div class="card__modal" *ngIf="isAvailable">
+            <div class="card__modal-icons card__modal-icons--edit">
+                <i class="material-icons">edit</i>
+            </div>
+            <div class="card__modal-icons card__modal-icons--delete">
+                <i class="material-icons">delete</i>
+            </div>
         </div>
-        <div class="card__modal-icons card__modal-icons--delete">
-            <i class="material-icons">delete</i>
-        </div>
-    </div>
-    <router-outlet></router-outlet>
+    </section>    
 </section>
