style: refactor button

--- a/src/app/components/skeleton/skeleton.component.scss
+++ b/src/app/components/skeleton/skeleton.component.scss
@@ -1,5 +1,5 @@
 
-@import '../../../assets/utils/variables';
+@import '../../../assets/utils/variables-mixins';
 
 .loader {
     position: relative;
