--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -1,4 +1,4 @@
-@import './../../../assets/utils/variables';
+@import './../../../assets/utils/variables-mixins';
 
 .menu {
     background-color: $purple;
