--- a/src/app/modules/products/product-list/product-list.component.scss
+++ b/src/app/modules/products/product-list/product-list.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../assets/utils/variables';
+@import '../../../../assets/utils/variables-mixins';
 
 .list {
     margin-left: 8rem;
