--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -1,70 +1,50 @@
 @import './../../../assets/utils/variables-mixins';
 
 .menu {
+    display: flex;
+    justify-content: space-between;
     background-color: $purple;
-    font-size: 0.9rem;
-
-    &__list__itens:hover {
-        background-color: $purple-dark;
-        transition: .5s;
-    }
-}
-
-@media(min-width: 843px) {
-    .menu {
-        font-size: 1rem;
-        left: 0;
-        height: 95vh;
-        width: 7%;
-        border-radius: 0 2rem 2rem 0;
-        padding: 1rem;
+    border-radius: 0 0 10px 10px;
+    
+    &__itens {
         display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        position: fixed;
+        align-items: center;
+        width: 100%;
+    }
 
-        &__profile {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-around;
-            height: 20%;
-            background: $purple-dark;
-            border-radius: 10px;
-            padding: 0.9rem;
+    &__list {
+        text-align: center;
+        padding: 0.5rem;
+
+        li {
+            list-style: none;
         }
 
-        &__list {
-            padding: 0;
-            margin: 0;
-            list-style: none;
-            margin-top: 2rem;
-  
-            &__item {
-                font-size: 1rem;
-                font-weight: $bold;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                text-align: center;
-                justify-content: space-around;
-                color: $white;
-                text-decoration: none;
-                cursor: pointer;
-                transition: .5s;
+        &__item {
+            text-decoration: none;
+            color: $white;
+            font-size: 0.6rem;
 
-                &:hover {
-                    background-color: $purple-dark;
-                    border-radius: 10px;
-                    padding: 1rem;
-                }
+            &__icon {
+                display: none;
             }
         }
+
+        &:hover {
+            background-color: $purple-dark;
+            border-radius: 10px;
+        }
+    }
+
+    &__profile {
+        display: flex;
+        align-items: center;
+        font-size: 0.6rem;
+        margin: 0.5rem;
     }
 }
 
-@media(min-width: 1440px) {
-    .menu__list {
-        border-bottom: 1.5px solid $purple-dark;
-    }
+.material-icons {
+    font-size: 0.5rem;
+    margin-left: 0.5rem;
 }
