style: card mobile first

--- a/src/app/components/cards/cards.component.html
+++ b/src/app/components/cards/cards.component.html
@@ -1,1 +1,17 @@
-<p>cards works!</p>
+<section class="cards">
+    <div class="cards__infos">
+        <p class="cards__infos__title">Ganhos</p> 
+        <hr class="cards__line"/> 
+        <span class="cards__infos--money">R$ 500,00 reais</span>
+    </div>
+    <div class="cards__infos">
+        <p class="cards__infos__title">Gastos</p> 
+        <hr class="cards__line"/> 
+        <span class="cards__infos--lose">R$ 200,00 reais</span>
+    </div>
+    <div class="cards__infos">            
+        <p class="cards__infos__title">Estoque</p> 
+        <hr class="cards__line"/> 
+        <span>200 produtos</span>
+    </div>
+</section>
