--- a/src/app/modules/products/products.component.html
+++ b/src/app/modules/products/products.component.html
@@ -1,18 +1,1 @@
-<section class="header">
-    <header class="cards">
-        <div class="cards__infos">
-            Ganhos
-            <hr class="cards__line"/> 
-            <span class="cards__infos--money">R$ 500,00 reais</span>
-        </div>
-        <div class="cards__infos">
-            Gastos
-            <hr class="cards__line"/> 
-            <span class="cards__infos--lose">R$ 200,00 reais</span>
-        </div>
-        <div class="cards__infos">            
-            Estoque
-            <hr class="cards__line"/> 
-            <span>200 produtos</span></div>
-    </header>
-</section>
+<app-cards></app-cards>
