--- a/src/app/components/cards/cards.component.scss
+++ b/src/app/components/cards/cards.component.scss
@@ -7,12 +7,23 @@
     justify-content: space-around;
     padding: 1rem;
 
+    @include responsive('tablet') {
+        margin-left: 5rem;
+        flex-direction: row;
+        height: 20vh;
+    }
+
     &__infos {
         background-color: $dark;
         border-radius: 10px;
         padding: 1rem;
         text-align: center;
         font-weight: 700;
+
+        @include responsive('tablet') {
+            width: 50%;
+            margin-left: 1rem;
+        }
 
         &__title {
             margin: 0;
