style: remove label

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
             <li>
                 <a [routerLink]="[sidebarItens.routeLink]" class="menu__list__item">
                     <i class="material-icons menu__list__item__icon">{{ sidebarItens.icon }}</i>
-                    <span>{{ sidebarItens.label }}</span>
+                    <span class="menu__list__label">{{ sidebarItens.label }}</span>
                 </a>
             </li>
         </ul>
