--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -26,7 +26,7 @@
 
     &__list {
         text-align: center;
-        padding: 0.5rem;
+        padding: 0.2rem;
 
         li {
             list-style: none;
@@ -49,6 +49,13 @@
         &:hover {
             background-color: $purple-dark;
             border-radius: 10px;
+            padding: 1rem;
+        }
+
+        &__label {
+            @include responsive('tablet') {
+                display: none;
+            }
         }
     }
 
