--- a/src/app/modules/products/product-list/product-list.component.html
+++ b/src/app/modules/products/product-list/product-list.component.html
@@ -4,12 +4,8 @@
         <p *ngIf="isAvailable" class="card__list__title">{{ products.productName | titlecase }}</p>
     
         <div class="card__modal" *ngIf="isAvailable">
-            <div class="card__modal__icons card__modal__icons--edit">
-                <i class="material-icons">edit</i>
-            </div>
-            <div class="card__modal__icons card__modal__icons--delete">
-                <i class="material-icons">delete</i>
-            </div>
+            <button class="card__modal__icons card__modal__icons--edit"><i class="material-icons">edit</i></button>    
+            <button class="card__modal__icons card__modal__icons--delete"><i class="material-icons">delete</i></button>
         </div>
     </section>    
 </section>
