--- a/src/app/modules/products/create-product/create-product.component.scss
+++ b/src/app/modules/products/create-product/create-product.component.scss
@@ -5,72 +5,77 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: auto;
-}
+    height: 100vh;
 
-.form {
-    margin: 2rem 0;
-    padding: 1rem;
-    border-radius: 5px;
-    background-color: $dark;
-    width: 80%;
-
-    &__title {
-        border-left: 5px solid $purple;
-        padding-left: 0.5rem;
+    @include responsive('tablet') {
+        margin-left: 5rem;
     }
 
-    &__inputs {
-        display: flex;
-        width: 100%;
-        flex-direction: column;
-
-        &__style {
-            border: none;
-            background-color: $black-dark;
-            margin-top: 1rem;
-            padding: 0.9rem;
-            border-radius: 5px;
-            outline: none;
-            color: $white;
-
-            &--upload {
+    &__form {
+        margin: 2rem 0;
+        padding: 1rem;
+        border-radius: 5px;
+        background-color: $dark;
+        width: 80%;
+    
+        &__title {
+            border-left: 5px solid $purple;
+            padding-left: 0.5rem;
+        }
+    
+        &__inputs {
+            display: flex;
+            width: 100%;
+            flex-direction: column;
+    
+            &__style {
+                border: none;
                 background-color: $black-dark;
-                border: 2px dotted $purple;
-                line-height: 23px;
-                overflow: hidden;
-                padding: 1rem;
-                position: relative;
-                resize: none;
-                font-size: 0.5rem;
-                text-align: center;
                 margin-top: 1rem;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                [type="file"] {
-                    cursor: pointer;
-                    display: block;
+                padding: 0.9rem;
+                border-radius: 5px;
+                outline: none;
+                color: $white;
+    
+                &--upload {
+                    background-color: $black-dark;
+                    border: 2px dotted $purple;
+                    line-height: 23px;
+                    overflow: hidden;
+                    padding: 1rem;
+                    position: relative;
+                    resize: none;
                     font-size: 0.5rem;
-                    filter: alpha(opacity=0);
-                    min-height: 100%;
-                    min-width: 100%;
-                    opacity: 0;
-                    position: absolute;
-                    right: 0px;
-                    top: 0px;
-                    z-index: 1;
+                    text-align: center;
+                    margin-top: 1rem;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    [type="file"] {
+                        cursor: pointer;
+                        display: block;
+                        font-size: 0.5rem;
+                        filter: alpha(opacity=0);
+                        min-height: 100%;
+                        min-width: 100%;
+                        opacity: 0;
+                        position: absolute;
+                        right: 0px;
+                        top: 0px;
+                        z-index: 1;
+                    }
+                }
+    
+                &--span {
+                    margin-left: 1rem;
+                    font-size: 0.9rem;
                 }
             }
-
-            &--span {
-                margin-left: 1rem;
-                font-size: 0.9rem;
-            }
+        }
+    
+        &__footer {
+            width: 100%;
         }
     }
-
-    &__footer {
-        width: 100%;
-    }
 }
+
