style: changed responsive

--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -21,6 +21,8 @@
 
         @include responsive('tablet') {
             flex-direction: column;
+            justify-content: center;
+            height: 85vh;
         }
     }
 
