style: add graph mobile

--- a/src/app/components/graph/graph.component.scss
+++ b/src/app/components/graph/graph.component.scss
@@ -8,9 +8,13 @@
 
     background-color: $dark;
     border-radius: 5px;
-    margin: 3rem 1rem 0 6.5rem;
-    padding: 1rem;
+    margin: 1rem;
+    padding: 1rem;    
 
+    @include responsive('tablet') {
+        margin: 3rem 1rem 0 6.5rem;
+    }
+    
     &__line {
         width: 100%;
     }
