--- a/src/app/components/cards/cards.component.scss
+++ b/src/app/components/cards/cards.component.scss
@@ -25,9 +25,20 @@
             margin-left: 1rem;
         }
 
+        @include responsive('desktop') {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            border-radius: 5px;
+        }
+
         &__title {
             margin: 0;
             color: $purple;
+            
+            @include responsive('desktop') {
+                font-size: 1.5rem;
+            }
         }
     }
 
