--- a/src/app/components/graph/graph.component.scss
+++ b/src/app/components/graph/graph.component.scss
@@ -14,8 +14,20 @@
     @include responsive('tablet') {
         margin: 3rem 1rem 0 6.5rem;
     }
+
+    @include responsive('desktop') {
+        margin: 2rem 1rem 0 6.5rem;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
     
     &__line {
         width: 100%;
+
+        @include responsive('desktop') {
+            height: 55vh;
+            width: auto;
+        }
     }
 }
