--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,5 +1,9 @@
 <aside class="menu">
+    <div class="menu__logo">
+        <p class="menu__title menu__title--first">D<span class="menu__title menu__title--second">V</span></p>
+    </div>
     <section class="menu__itens">
+        
         <ul class="menu__list" *ngFor="let sidebarItens of sidebar">
             <li>
                 <a [routerLink]="[sidebarItens.routeLink]" class="menu__list__item">
