--- a/src/app/modules/authentication/signin/signin.component.scss
+++ b/src/app/modules/authentication/signin/signin.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../assets/utils/variables';
+@import '../../../../assets/utils/variables-mixins';
 
 .signin {
     background-color: $dark;
