feature: add localstorage modal

--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -2,5 +2,5 @@
     <div class="modal">
         <ng-content></ng-content>
     </div>
-    <div (click)="toggle()" class="overlay"></div>
+    <div (click)="toggle(product)" class="overlay"></div>
 </ng-container>
